<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.User"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/username"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:layout_marginLeft="35dp"
        android:height="50dp"
        android:text="@string/atme"
        android:width="200dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:height="50dp"
        android:text="@string/myanswerlist"
        android:width="200dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:height="50dp"
        android:onClick="seeMyQuestionList"
        android:text="@string/myquestionlist"
        android:width="200dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/password"
        android:textSize="12sp" />

</RelativeLayout>

